# buenavista

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
Calc/: Angel_theta.nb  Angel_theta.wxm  efka.wxm  norms.wxm  parametre.txt  parametre02.txt
Data/: Makefile.in  dataNucleons.ods  dataPions.ods  dataTau.ods  dipole.wxm
Docs/: buenavista.tex  diagramNucleons.odg  diploma.ps  hyperons.bib  printGraph.tex
Docs/doxygen/: Doxyfile  mainpage.dox
Fortran/: FN922T.FOR  FN9RES.for  dub.for  fitDubnicka.for  ifn9cbfs  ifn9cbfs_030512.txt  ifn9hyp  ifn9hyp_selected  minuit.for  minuitb.for  ofn9cbf  ofn9cbfTAB.txt
Hyperons/: Hyperons.cpp  HyperonsPlot.cpp  HyperonsRadii.cpp  HyperonsUsage.cpp  Makefile.am  Mesons.cpp  NucleonUamDiploma.cpp  NucleonUamH.cpp  NucleonUamHybrid.cpp  NucleonUamMin.cpp  NucleonUamNaive.cpp  NucleonsChiH.cpp  NucleonsDebugH.cpp  NucleonsFitH.cpp  NucleonsH.cpp  NucleonsPlotH.cpp  NucleonsUsageH.cpp
Hyperons/modules/: ConstBasic.cpp  ConstMesons-D.cpp  ConstMesons.cpp  ExperimentalData.cpp  ExperimentalData.h  Hyperon3G.cpp  HyperonsGetType.cpp  Nucleon3GH.cpp  NucleonFcnH.cpp  NucleonFcnH.h  NucleonUamH.h  PlotGraphH.cpp  PlotGraphH.h
Nucleons/: Komparision.cpp  Makefile.am  MultiGraph.cpp  Nucleons-D.cpp  Nucleons.cpp  NucleonsCS.cpp  NucleonsChi.cpp  NucleonsChiCS.cpp  NucleonsDebug.cpp  NucleonsDebugCS.cpp  NucleonsFit.cpp  NucleonsFitCS.cpp  NucleonsFitMC.cpp  NucleonsMC.cpp  NucleonsPlot.cpp  NucleonsPlotCS.cpp  NucleonsRadius.cpp  NucleonsRadiusCS.cpp  NucleonsRadiusCSMC.cpp  NucleonsRadiusMC.cpp  NucleonsTableCS.cpp  NucleonsUsage.cpp  NucleonsUsageCS.cpp  NucleonsUsageMC.cpp  SingleGraph.cpp  matica  plotGEN.cpp  plotRatio.cpp  s1.eps  viewPlusDataAE.eps
Nucleons/Delta/: DeltaData.cpp  DeltaData.h  DeltaGMstar.cpp  DeltaMain.cpp  DeltaMainAll.cpp  DeltaPlot.cpp  DeltaPlot.h  DeltaREM.cpp  DeltaRSM.cpp  Makefile.am
Nucleons/Iachello/: Makefile.am  NucIachello.cpp  NucIachelloChi.cpp  NucIachelloDebug.cpp  NucIachelloFit.cpp  NucIachelloPlot.cpp  NucIachelloTable.cpp  NucIachelloUsage.cpp  PlotGraphIachello.cpp  viewPlusDataAE.eps
Nucleons/modules/: ConstBasic.cpp  ConstDelta.cpp  ConstMesons-D.cpp  ConstMesons.cpp  ExperimentalData.cpp  ExperimentalData.h  FunctionGauss.h  Nucleon3G-D.cpp  Nucleon3G.cpp  NucleonBertozzi.cpp  NucleonBertozzi.h  NucleonFcn.cpp  NucleonFcn.h  NucleonFcnCS.cpp  NucleonIachello.cpp  NucleonIachello.h  NucleonKelly.cpp  NucleonKelly.h  NucleonUam.cpp  NucleonUam.h  PlotGraph.cpp  PlotGraph.h  PlotGraphA.cpp
Pions/: Makefile.am  Pions.cpp  PionsChi.cpp  PionsDebug.cpp  PionsFit.cpp  PionsPlot.cpp  PionsUsage.cpp
Pions/modules/: ConstBasic.cpp  ConstMesons.cpp  ExperimentalData.cpp  ExperimentalData.h  PionFcn.cpp  PionFcn.h  PionUam.cpp  PionUam.h  PlotGraph.cpp  PlotGraph.h
Transition/: Makefile.am  fitEta.cpp  fitEtaPrime.cpp  fitPiZero.cpp  plotEta.cpp  plotEtaPrime.cpp  plotPiZero.cpp
Transition/Eta/: plotEta.cpp
Transition/modules/: ConstMesons.cpp  ExperimentalData.cpp  MesonTest.cpp  MesonTest.h  MesonUam.cpp  MesonUam.h  PlotGraph.h  TransitionFcn.cpp  TransitionFcn.h
src/: Makefile.am  main.cc
